--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@
         }
         .head{
             font-size: 3vmax;
+            display: inline;
         }
         @media screen and (max-width:800px){
             nav{
