Backend project added

--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
     <!-- RIGHT COLUMN -->
     <div class="about-omimg">
       <img id="profile" src="ommer.jpg" alt="Profile Picture">
-      <a href="resume2_0 (1).pdf" class="resume-btn">Download Resume</a>
+      <a href="OMMERnewResume.pdf" class="resume-btn">Download Resume</a>
     </div>
   </div>
 </div>
@@ -583,17 +583,19 @@
         <!-- <div class="container" data-aos="flip-left" >
         <img src="https://www.dropbox.com/s/6dogats1x34ja6f/food%20website.jpeg?raw=1" class="p" alt=""><span class="hover">Online Food Website</span></div> -->
         <div class="container" data-aos="zoom-in">
-        <a href="https://ommer-sideeq.github.io/Tour-And-Travel/">        <img src="tourrrr.jpeg" class="p" alt=""><span class="hover">Tour-And-Travel</span></div>
+        <a href="https://ommer-sideeq.github.io/Tour-And-Travel/">     
+       <img src="tourrrr.jpeg" class="p" alt=""><span class="hover">Tour-And-Travel</span></div>
 </a>
         <div class="container" data-aos="zoom-in">
-        <a href="https://ommer-sideeq.github.io/Coffee-Maker/">        <img src="https://www.dropbox.com/s/elzd2yb6pjh9zru/owl.jpeg?raw=1" class="p"  alt=""><span class="hover">Coffee Maker clone</span></div>
+        <a href="https://ommer-sideeq.github.io/Coffee-Maker/">       
+        <img src="https://www.dropbox.com/s/elzd2yb6pjh9zru/owl.jpeg?raw=1" class="p"  alt=""><span class="hover">Coffee Maker clone</span></div>
 </a>
-        <!-- <div class="container" data-aos="flip-right">
+        <!--  <div class="container" data-aos="flip-right">
         <img src="https://www.dropbox.com/s/y5ss4dt8nn3uqqw/music%20player.jpeg?raw=1" class="p" alt=""><span class="hover">Mountains clone</span></div>
-        <div class="container" data-aos="flip-left">
-        <img src="https://www.dropbox.com/s/t6yzxwmxhfq3yza/coffee.jpeg?raw=1" class="p" alt=""><span class="hover">Owl clone</span></div> 
+        <div class="container" data-aos="flip-left"> -->
+        <!-- <img src="https://www.dropbox.com/s/t6yzxwmxhfq3yza/coffee.jpeg?raw=1" class="p" alt=""><span class="hover">Owl clone</span></div>  -->
         <div class="container" data-aos="flip-right">
-        <img src="https://www.dropbox.com/s/7g3l1spvcrft8rz/form.jpeg?raw=1" class="p"  alt=""><span class="hover">Form Design</span></div> -->
+        <img src="Backend.png" class="p"  alt=""><span class="hover">E-Commerce Website</span></div>
     </div>
     </div>
     <div id="contact">
